PR/51478: Jose Luis Rodriguez Garcia: Fix leak mem fsck_lfs/lfs.c